<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".android.ui.CreatePostFragment">

    <!-- Campo Titolo -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_post_title"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:contentDescription="@string/create_post_title_field_description"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo Body: occupa tutto lo spazio rimanente -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/body_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/create_post_body"
        app:layout_constraintTop_toBottomOf="@id/title_input_layout"
        app:layout_constraintBottom_toTopOf="@id/button_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:overScrollMode="ifContentScrolls"
            android:contentDescription="@string/create_post_body_field_description"
            android:padding="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Pulsanti in basso -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_button_add_new_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginEnd="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_button_cancel"
        app:layout_constraintStart_toEndOf="@id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>